--- a/home.html
+++ b/home.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
+
 <body>
-    It's Home!
+    <h1>It's Home!</h1>
+
 </body>
+
 </html>
