--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h1>Linux Learning</h1>
     <h2>What is Linux:</h2>
     <P>
-    <a href="https://en.wikipedia.org/wiki/Linux"><img src="linux.png" width="128" hright="256" title="The mascot of Linux"></a>
-    &nbsp Linux (pronounced /ˈɪnəks/) is a Unix-like computer operating system assembled under the model of free and open-source
+        <a href="https://en.wikipedia.org/wiki/Linux"><img src="linux.png" width="128" hright="256" title="The mascot of Linux"></a>
+        &nbsp Linux (pronounced /ˈɪnəks/) is a Unix-like computer operating system assembled under the model of free and open-source
         software development and distribution. The defining component of Linux is the Linux kernel, an operating system kernel
         first released on September 17, 1991 by Linus Torvalds. The Free Software Foundation uses the name GNU/Linux to describe
         the operating system, which has led to some controversy.</P>
@@ -33,9 +33,38 @@
     <h2>The Step of Installation of Linux:</h2>
     <ol>
         <li>Insert a live cd into your PC</li>
-        <li>Switch boot priority to CD-ROM(OR DVD-ROM)</li>
+        <li>Switch boot priority to CD-ROM(OR DVD-ROM)
+            <ul>
+                <li>Remember to switch boot priority!</li>
+                <li>Don not forget to confirm the boot type of the PC (ie. EFI or MBR)</li>
+            </ul>
+        </li>
     </ol>
-    <hr />
+    <hr>
+    <table>
+        <tr>
+            <th>Linux Destro</th>
+            <th>Linux Kernel</th>
+            <th>Costs</th>
+        </tr>
+        <tr>
+            <td>CentOS</td>
+            <td>4.1.0</td>
+            <td>Free</td>
+        </tr>
+        <tr>
+            <td>Fedora</td>
+            <td>4.1.0</td>
+            <td>Free</td>
+        </tr>
+        <tr>
+            <td>RedHat Enterprise Linux</td>
+            <td>4.1.0</td>
+            <td>Charged</td>
+        </tr>
+    </table>
+    <img src="../html_css_learning/p.jpg" alt="BF4">
+    <hr>
     <a href="mailto:morhop45@hotmail.com">Send a E-mail</a>
 
 </html>
