add content to about-page

--- a/about.html
+++ b/about.html
@@ -5,6 +5,11 @@
     <title>About</title>
 </head>
 <body>
-    This is About!
+    <h3>Please input your information</h3>
+    <form action="#" method="POST">
+        <label for="firstname">First Name</label>
+        <input type="text" name="firstname" id="firstname" placeholder="Your First Name" required>
+        <input type="submit" value="Ok">
+    </form>
 </body>
 </html>
