--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h1>Linux Learning</h1>
     <h2>What is Linux:</h2>
     <P>
-        <a href="https://en.wikipedia.org/wiki/Linux"><img src="linux.png" width="128" hright="256" title="The mascot of Linux"></a>
-        &nbsp Linux (pronounced /ˈɪnəks/) is a Unix-like computer operating system assembled under the model of free and open-source
+        <a href="https://en.wikipedia.org/wiki/Linux"><img src="linux.png" width="128" title="The mascot of Linux" alt="Linux mascot"></a>
+        &nbsp; Linux (pronounced /ˈɪnəks/) is a Unix-like computer operating system assembled under the model of free and open-source
         software development and distribution. The defining component of Linux is the Linux kernel, an operating system kernel
         first released on September 17, 1991 by Linus Torvalds. The Free Software Foundation uses the name GNU/Linux to describe
         the operating system, which has led to some controversy.</P>
@@ -63,7 +63,6 @@
             <td>Charged</td>
         </tr>
     </table>
-    <img src="../html_css_learning/p.jpg" alt="BF4">
     <hr>
     <a href="mailto:morhop45@hotmail.com">Send a E-mail</a>
 
